@@ -83,9 +83,6 @@ extern SCM scm_list_set_x (SCM lst, SCM k, SCM val);
 extern SCM scm_list_cdr_set_x (SCM lst, SCM k, SCM val);
 extern SCM scm_last_pair (SCM sx);
 extern SCM scm_list_tail (SCM lst, SCM k);
-extern SCM scm_sloppy_memq (SCM x, SCM lst);
-extern SCM scm_sloppy_memv (SCM x, SCM lst);
-extern SCM scm_sloppy_member (SCM x, SCM lst);
 extern SCM scm_memq (SCM x, SCM lst);
 extern SCM scm_memv (SCM x, SCM lst);
 extern SCM scm_member (SCM x, SCM lst);
@@ -106,6 +103,9 @@ extern void scm_init_list (void);
 #if (SCM_DEBUG_DEPRECATED == 0)
 
 #define scm_list_star scm_cons_star
+extern SCM scm_sloppy_memq (SCM x, SCM lst);
+extern SCM scm_sloppy_memv (SCM x, SCM lst);
+extern SCM scm_sloppy_member (SCM x, SCM lst);
 
 #endif  /* SCM_DEBUG_DEPRECATED == 0 */
 
